[workspace]

members = [
    "common/directory",
    "common/hashset_delay",
    "common/lighthouse_metrics",
    "common/task_executor",
    "common/ionian_version",
    "common/unused_port",

    "node",
    "node/miner",
    "node/network",
    "node/rpc",
    "node/service",
    "node/shared_types",
    "node/store",
    "node/sync",
]
