[workspace]

members = [
    "common/channel",
    "common/directory",
    "common/hashset_delay",
    "common/lighthouse_metrics",
    "common/merkle_tree",
    "common/task_executor",
    "common/ionian_version",
    "common/unused_port",
    "common/cfx_rpc_client",

    "node",
    "node/chunk_pool",
    "node/log_entry_sync",
    "node/miner",
    "node/network",
    "node/router",
    "node/rpc",
    "node/shared_types",
    "node/storage",
    "node/storage-async",
    "node/sync",
]

[patch.crates-io]
ethabi = { git = "https://github.com/zz-ionian/ethabi.git", branch = "eth_0.12" }