[package]
name = "ionian_node"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.12", features = ["cargo"] }
futures = "0.3.21"
ionian_version = { path = "../common/ionian_version" }
network = { path = "./network" }
rpc = { path = "./rpc" }
tokio = { version = "1.17.0", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

[dependencies.libp2p]
version = "0.44.0"
default-features = true
features = ["websocket", "identify", "mplex", "yamux", "noise", "gossipsub", "dns-tokio", "tcp-tokio", "plaintext", "secp256k1"]
