[package]
name = "merkle_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merkle_light = { git = "https://github.com/zz-ionian/merkle_light.git", rev = "2da76ae" }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[dev-dependencies]
hex = "0.4.3"