[package]
name = "log_entry_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
async-trait = "0.1.56"
cfx-addr = { git = "https://github.com/Conflux-Chain/conflux-rust.git" }
cfx_rpc_client = { path = "../../common/cfx_rpc_client" }
ethereum-types = "0.12"
futures = "0.3.21"
jsonrpsee = { version = "0.14.0", features = ["full"] }
shared_types = { path = "../shared_types" }
task_executor = { path = "../../common/task_executor" }
tokio = "1.19.2"
ethers = { version = "0.13", features = ["ws", "rustls", "abigen"] }
serde_json = "1.0.82"
storage = { path = "../storage" }