[package]
name = "network"
version = "0.2.0"
edition = "2021"

[dependencies]
directory = { path = "../../common/directory" }
dirs = "3.0.1"
discv5 = { version = "0.1.0-beta.13", features = ["libp2p"] }
error-chain = "0.12.4"
eth2_ssz = "0.4.0"
eth2_ssz_derive = "0.3.0"
eth2_ssz_types = "0.2.1"
ethereum-types = "0.12.1"
fnv = "1.0.7"
futures = "0.3.7"
hashset_delay = { path = "../../common/hashset_delay" }
hex = "0.4.2"
ionian_version = { path = "../../common/ionian_version" }
lazy_static = "1.4.0"
lighthouse_metrics = { path = "../../common/lighthouse_metrics" }
lru = "0.7.1"
parking_lot = "0.12.0"
prometheus-client = "0.15.0"
rand = "0.8.5"
regex = "1.5.5"
serde = { version = "1.0.116", features = ["derive"] }
serde_derive = "1.0.116"
sha2 = "0.9.1"
smallvec = "1.6.1"
snap = "1.0.1"
strum = { version = "0.24.0", features = ["derive"] }
task_executor = { path = "../../common/task_executor" }
tiny-keccak = "2.0.2"
tokio = { version = "1.14.0", features = ["time", "macros"] }
tokio-io-timeout = "1.1.1"
tokio-util = { version = "0.6.2", features = ["codec", "compat", "time"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
tracing-test = "0.2.1"
unsigned-varint = { version = "0.6.0", features = ["codec"] }
unused_port = { path = "../../common/unused_port" }

[dependencies.libp2p]
version = "0.43.0"
default-features = false
features = ["websocket", "identify", "mplex", "yamux", "noise", "gossipsub", "dns-tokio", "tcp-tokio", "plaintext", "secp256k1"]

[dev-dependencies]
slog-term = "2.6.0"
slog-async = "2.5.0"
tempfile = "3.1.0"
exit-future = "0.2.0"
void = "1"
