[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
jsonrpsee = { version = "0.11.0", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
tracing = "0.1.34"
