[package]
name = "shared_types"
version = "0.1.0"
edition = "2021"

[dependencies]
merkle_tree = { path = "../../common/merkle_tree"}

anyhow = { version = "1.0.57", features = ["backtrace"] }
ethereum-types = "0.12"
eth2_ssz = "0.4.0"
eth2_ssz_derive = "0.3.0"
eth2_ssz_types = "0.2.1"
merkle_light = { path = "../../common/merkle_light" }
tiny-keccak = "2.0.2"
typenum = "1.15.0"