[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
eth2_ssz = "0.4.0"
ethereum-types = "0.13.1"
kvdb = "0.11.0"
kvdb-memorydb = "0.11.0"
kvdb-rocksdb = "0.15.2"
#merkle_light = {git = "https://github.com/sitano/merkle_light.git", rev = "fe31d4e" }
merkle_light = { git = "https://github.com/zz-ionian/merkle_light.git", rev = "2da76ae" }
merkle_tree = { path = "../../common/merkle_tree"}
rayon = "1.5.3"
shared_types = { path = "../shared_types" }
tracing = "0.1.35"
typenum = "1.15.0"

[dev-dependencies]
tempdir = "0.3.7"
rand = "0.8.5"
hex = "0.4.3"