[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
eth2_ssz = "0.4.0"
ethereum-types = "0.12"
kvdb = "0.10.0"
kvdb-memorydb = "0.10.0"
kvdb-rocksdb = "0.14.0"
#merkle_light = {git = "https://github.com/sitano/merkle_light.git", rev = "fe31d4e" }
merkle_light = { path = "../../common/merkle_light" }
merkle_tree = { path = "../../common/merkle_tree"}
rayon = "1.5.3"
shared_types = { path = "../shared_types" }
tracing = "0.1.35"
typenum = "1.15.0"
hex = "0.4.3"

[dev-dependencies]
tempdir = "0.3.7"
rand = "0.8.5"
