[package]
name = "sync"
version = "0.1.0"
edition = "2021"

[dependencies]
channel = { path = "../../common/channel" }
network = { path = "../network" }
rand = "0.8.5"
shared_types = { path = "../shared_types" }
storage = { path = "../storage" }
task_executor = { path = "../../common/task_executor" }
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.35"
