[package]
name = "sync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
channel = { path = "../../common/channel" }
file_location_cache = { path = "../file_location_cache" }
network = { path = "../network" }
rand = "0.8.5"
shared_types = { path = "../shared_types" }
storage = { path = "../storage" }
storage-async = { path = "../storage-async" }
task_executor = { path = "../../common/task_executor" }
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.35"
